-XX:+AOTClassLinking is not compatible with jdwp

XMLWordPrintable

    • b09
    • Verified

        Some jdwp testing failures are found when running with an AOT cache created with -XX:+AOTClassLinking.

        It's unclear what the exact cause is. Maybe the test cases use a JDWP agent that assumes certain classes are NOT yet loaded, when in fact those classes are loaded during JVM bootstrap due to the use of the AOT cache.

        Proposal:
        If an AOT cache was created with -XX:+AOTClassLinking, do not load it when -agent:jdwp.... is detected from the command-line

        Justification:
        Since AOT cache is an optimization feature, it's OK to disable this optimization when jdwp is required.

              Assignee:
              Ioi Lam
              Reporter:
              Ioi Lam
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: