8349122: -XX:+AOTClassLinking is not compatible with jdwp